[workspace]
members = ["bin"]
resolver = "2"

[workspace.package]
authors = ["Zhiyi Weng"]
version = "2.2.0"
edition = "2021"
description = "Fast WebSocket(s)/HTTP(s)/TCP relay proxy with WebRTC P2P supports."

[patch.crates-io]
webrtc = { git = "https://github.com/vyloy/webrtc.git", branch = "master" }
rcgen = { git = "https://github.com/vyloy/rcgen.git", branch = "main" }
x509-parser = { git = "https://github.com/vyloy/x509-parser.git", branch = "master" }
