[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
env_logger = "0.10.1"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["http1", "client"] }
log = { version = "0.4.20", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
thiserror = "1.0.51"
tokio = "1.34.0"
url = "2.5.0"
webrtc = "0.9.0"

[build-dependencies]
cbindgen = "0.26.0"
